add DefaultPreset for PrimeVue theme configuration

--- a/assets/css/tailwind.css
+++ b/assets/css/tailwind.css
@@ -1,5 +1,8 @@
-@import "tailwindcss/preflight";
+@import "tailwindcss-primeui";
+
 @tailwind utilities;
+
+@custom-variant dark (&:where(.app-dark, .app-dark *));
 
 :root {
     font-family: Inter;
